--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+:root {
+  --orange: rgba(239, 91, 36, 255); /* color: var(--orange) */
+  --gray: #333333;
+}
+
+
 body {
   background-color: rgba(239, 91, 36, 255);
-  background-image: linear-gradient(white 0%, rgba(239, 91, 36, 255) 10%, black 90%);
+  background-image: linear-gradient(white 0%, var(--orange) 10%, black 90%);
   color: white;
   font-family: 'Verdana', sans-serif;
   text-align: center;
@@ -17,6 +23,32 @@ h2 {
   font-size: 25px
 }
 
+/* Button Hover Animation (Menu) */
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: var(--orange);
+}
+
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--orange);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+/* Custom Buttons */
 .button-container {
   display: flex;
   justify-content: center;
@@ -40,6 +72,7 @@ h2 {
   color: white;
 }
 
+/* Header Menu */
 .menu {
   list-style-type: none;
   margin: 0;
