--- a/style.css
+++ b/style.css
@@ -1,26 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
   --orange: rgba(239, 91, 36, 255); /* color: var(--orange) */
-  --gray: #333333;
+  --gray: #686868;
+  --offwhite: #f7f7f7;
 }
 
 
 body {
-  background-color: rgba(239, 91, 36, 255);
-  background-image: linear-gradient(white 0%, var(--orange) 10%, black 90%);
-  color: white;
-  font-family: 'Verdana', sans-serif;
+  background-color: var(--offwhite);
+  color: black;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
+  margin: 0;
 }
 
-h1 {
-  color: whitesmoke;
+h1 {    
   margin-top: 50px;
 }
 
-h2 {
-  color: white;
+h2 {    
+  margin: auto;
   margin-top: 50px;
-  font-size: 25px
+  font-weight: normal;
+  font-size: 250%;
+  border-bottom: 5px solid var(--orange);
+  padding: 0.5%;
+  width: 15%;
 }
 
 /* Button Hover Animation (Menu) */
@@ -55,45 +61,141 @@ h2 {
   flex-wrap: wrap;
 }
 
-.button {
-  background-color: white;
-  color: black;
+.top, button {
+  margin: 2%;
+  padding: 1%;
+  width: 5%;
   border: none;
-  padding: 10px 20px;
-  text-decoration: none;
-  margin: 10px;
-  font-size: 18px;
-  border-radius: 20px;
-  box-shadow: 0px 0px 10px #9b9b9b;
+  color: var(--orange);
+  background-color: #ebebeb;
+  transition: all 0.3s ease 0s;
 }
 
-.button:hover {
-  background-color: gray;
+.top:hover, button:hover {
+  background-color: var(--orange);
   color: white;
 }
+
 
 /* Header Menu */
 .menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
   overflow: hidden;
-  background-color: #555;
-  border-radius: 40px;
+  background-color: rgb(61, 61, 61);
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+
 }
 
-.menu li {
-  float: right;
-}
 
-.menu li a {
-  display: block;
-  color: white;
+.menu a {
+  display: block;    
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
+  padding: 1%;
+  width: 7%;
+  height: auto;
+}
+.menu a:first-of-type {
+  width: 3%;
+  padding: 0;
 }
 
-.menu li a:hover {
+.menu a:hover:not(:first-of-type) {
   background-color: rgb(52, 52, 52);
+}
+
+.menu a img{
+  object-fit: contain;
+  width: 100%;
+  border-radius: 1em;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2%;
+  padding: 1% 4%;
+}
+
+.grid-item {
+  background-color: #ebebeb;
+  padding: 1%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.grid-item img{
+  width: 40%;
+  border-radius: 5px;
+  object-fit: contain;
+}
+/*
+.slide-in {
+  animation: slide-in 0.5s ease forwards;
+}
+
+@keyframes slide-in {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+*/
+
+#about h2{
+  border: none;
+  font-weight: normal;
+}
+#about p{
+  color: var(--gray);
+  width: 30%;
+  margin: auto;
+}
+
+pre{
+  text-align: left;
+  width: 50%;
+  margin: auto;
+  color: var(--offwhite);
+  background-color: rgb(51, 51, 51);
+  border-radius: 5px;
+  padding: 1%;
+}
+
+.copy-button{
+  margin: 1%;
+  padding: 1%;
+  width: fit-content;
+  border: none;
+  color: var(--offwhite);
+  background-color: var(--gray);
+  transition: all 0.3s ease 0s;
+}
+
+table {
+  margin: auto;
+  border-collapse: collapse;
+  width: 40%;
+  text-align: center;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+th{
+  
+  border-bottom: #686868 1px solid;
+}
+
+p{
+  width: 50%;
+  margin: auto;
 }
