--- a/style-mobile.css
+++ b/style-mobile.css
@@ -101,9 +101,9 @@ h2 {
 	background-color: #333;
 	color: #fff;
 	padding: 10px;
-    float: left;
-    margin-top: 5px;
-    margin-left: 5px;
+  float: left;
+  margin-top: 5px;
+  margin-left: 5px;
 	cursor: pointer;
 	z-index: 1000;
 }
@@ -127,4 +127,9 @@ h2 {
 .menu-item:hover {
 	background-color: #555;
     border-bottom-right-radius: 30px;
+}
+
+/* Paragraph */
+.paragraph {
+  width: 80%;
 }
