--- a/style.css
+++ b/style.css
@@ -82,11 +82,8 @@ h2 {
   border-radius: 40px;
 }
 
-.menu li {
-  float: right;
-}
-
 .menu li a {
+  float: right;
   display: block;
   color: white;
   text-align: center;
@@ -94,6 +91,45 @@ h2 {
   text-decoration: none;
 }
 
+.menu li img {
+  float: right;
+}
+
 .menu li a:hover {
   background-color: rgb(52, 52, 52);
+}
+
+
+/* Search Bar */
+.menu li form {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: left;
+}
+
+.menu li form input[type="text"] {
+  margin-left: 5px;
+  padding: 5px;
+  padding-left: 13px;
+  padding-right: 60px;
+  border: 1px solid #ccc;
+  border-radius: 40px;
+  font-size: 16px;
+}
+
+.menu li form button[type="submit"] {
+  padding: 5px 20px;
+  background-color: var(--orange);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.menu li form button[type="submit"]:hover {
+  background-color: #cc4c1d;
 }
