--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -14,7 +14,7 @@ const isUpper = true
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<h2>Started by <span class="text-gradient">Itsbailey</span></h2>
+		<h2>Started by <span class="text-gradient">ItsbaileyX</span></h2>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
