little clean-up

--- a/Blogs/CSS/desktop.css
+++ b/Blogs/CSS/desktop.css
@@ -38,7 +38,7 @@
         height: 40px;
         border-radius: 50%;
         background-color: #383838;
-        background-image: url("../copy.webp");
+        background-image: url("../../HomeImages/copy.webp");
         color: #fff;
         background-size: 36px;
         background-position: center;
