--- a/Blogs/CSS/mobile.css
+++ b/Blogs/CSS/mobile.css
@@ -59,7 +59,7 @@ pre {
       height: 40px;
       border-radius: 50%;
       background-color: #383838;
-      background-image: url("../copy.webp");
+      background-image: url("../../HomeImages/copy.webp");
       color: #fff;
       background-size: 36px;
       background-position: center;
