--- a/style-mobile.css
+++ b/style-mobile.css
@@ -16,7 +16,9 @@ body {
   font-family: 'Verdana', sans-serif;
   text-align: center;
 }
-
+.desktop {
+  display: none;
+}
 h1 {
   color: whitesmoke;
   margin-top: 50px;
